# abx_atlas

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/processed/: atlas_summary.csv  qsar_bit_substructures.csv  qsar_leakage_results.csv  qsar_learning_curve.csv  qsar_meta.json
scripts/: download_chembl.py  reproduce.sh  run_atlas.py  run_qsar.py
scripts/runpod/: bootstrap.sh  launch_gpu_job.py
src/abxatlas/: __init__.py  cli.py  config.py  paths.py
src/abxatlas/atlas/: __init__.py  plots.py  run.py  stats.py
src/abxatlas/data/: __init__.py  annotate.py  curate.py  download.py
src/abxatlas/featurize/: __init__.py  fingerprints.py  graphs.py  scaffolds.py
src/abxatlas/models/: __init__.py  chemotypes.py  gnn.py  hpo.py  interpret.py  learning_curve.py  pretrained.py  qsar.py  run.py  splits.py
src/abxatlas/resources/: chemotype_families.yaml  target_keywords.yaml
tests/: test_annotate.py  test_bit_substructures.py  test_chemotypes.py  test_featurize.py  test_gnn.py  test_interpret.py  test_labels.py  test_learning_curve.py  test_neighbors.py  test_pipeline_smoke.py  test_pretrained.py  test_splits.py
tests/fixtures/: raw_assays.csv
