[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abx-atlas"
version = "0.2.0"
description = "Leakage-aware antibacterial QSAR benchmark on public ChEMBL data (CPU baselines + optional GPU ablation)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eric Snow" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "rdkit>=2023.9.1",
  "chembl-webresource-client>=0.10.9",
  "requests>=2.31",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "pyarrow>=14.0",
  "tqdm>=4.66",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.6"]
gpu = [
  "torch>=2.2",
  "torch_geometric>=2.5",
  "transformers>=4.40",
  "optuna>=3.5",
  "python-dotenv>=1.0",
  "runpod>=1.6",
]

[project.scripts]
abx-download = "abxatlas.cli:download_main"
abx-atlas = "abxatlas.cli:atlas_main"
abx-qsar = "abxatlas.cli:qsar_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
abxatlas = ["resources/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "data", "reports", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["abxatlas"]
